--- a/GestionClientes/src/main/resources/application.properties
+++ b/GestionClientes/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=Gesti
+spring.application.name=GestionClientes
+
+spring.datasource.url=jdbc:mysql://localhost:3306/clientes
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
