--- a/frontend-vue-clientes/package.json
+++ b/frontend-vue-clientes/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
